src/main/java/com/example/parking/error/AlreadyReservedException.java
package com.example.parking.error;

public class AlreadyReservedException extends Exception {

    public AlreadyReservedException() {
        super("Space has already been reserved");
    }
}
